# kawaii-vault

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md
src/: editor.rs  gist.rs  main.rs  struct_.rs
