[package]
name = "kawaii-vault"
version = "0.1.0"
authors = ["Cup Noodles <0xnoodles@gmail.com>"]
repository = "https://github.com/0xCN/kawaii-vault"
readme = "README.md"
license = "MIT"

[dependencies]
termios = "0.3"
libc = "0.2"
aes-gcm = "0.5.0"
aead = "0.2.0"
base64 = "0.12.0"
rpassword = "4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rand = "0.7.3"
ureq = { version = "0.12.1", features = ["json"] }
serde_json = "1.0"
md5 = "0.7.0"